# aimemory

./: .env.example  .gitignore  CHANGELOG.md  CWS-SUBMISSION.md  OPTIMIZATION-PLAN.md  README.md  STRATEGY-UPDATE-2026-04-26.md  extension_tech_analysis.md  generate_icons.py  next.config.ts  nginx-aimemory.conf  package-lock.json  package.json
.cron-tmp/: update-plan.py
.github/workflows/: publish-pypi.yml  publish.yml
chrome-extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
chrome-extension/icons/: create_icons.py
chrome-extension/store-assets/: screen-descriptions.txt  screenshot-guide.txt  short-description.txt  store-description.txt
docs/: CHROME-WEB-STORE-CHECKLIST.md  OPTIMIZATION-PLAN.md  PYPI-SETUP-GUIDE.md  audit-report-2026-05-23.md  chrome-web-store-listing.md  e2ee-comprehensive-report-20260516.md  e2ee-quick-guide.md  e2ee-technical-research.md  how-we-built-this.md  product-marketing-plan-v2.md  product-marketing-plan-v3.md  pypi-publishing-guide.md  technical-feasibility-report-20260516.md
docs/plans/: 2026-05-05-mvp-plan.md
docs/research/: 01-competitive-analysis.md  02-keyword-data.md  03-technical-feasibility.md  04-monetization-model.md
extension/: package-lock.json  package.json  wxt.config.ts
launch/: hn-and-twitter.md  reddit-posts.md
mcp-server/: LICENSE  README.md  mcp-config.json  pyproject.toml  server.py  smithery.yaml  storage.py
mcp-server/aimemory_mcp/: __init__.py  server.py  storage.py
scripts/: check_blog_counts.py  count_blogs.js  seo-monitor.py
src/: middleware.ts
(+355 files in other folders)
