[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aimemory-mcp-server"
version = "0.1.0"
description = "AI Memory MCP Server — persistent memory for AI assistants via Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AI Memory", email = "hello@aimemory.pro" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-memory",
    "llm",
    "claude",
    "cursor",
    "persistent-memory",
    "knowledge-base",
    "fts5",
    "sqlite",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.urls]
Homepage = "https://aimemory.pro"
Repository = "https://github.com/aimemory/aimemory"
Issues = "https://github.com/aimemory/aimemory/issues"
Documentation = "https://aimemory.pro"

[project.scripts]
aimemory-mcp-server = "aimemory_mcp.server:main"
